--- a/BotwCardGame/BotwCardGame/BotwCardGame.csproj
+++ b/BotwCardGame/BotwCardGame/BotwCardGame.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Ressources\ItemList.json" />
+    <None Remove="Ressources\AllItems.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nancy" Version="1.4.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
 </Project>
